[package]
name = "nexusdb-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexusdb-backend"
path = "src/main.rs"

[dependencies]
# Framework web
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Seguridad
jsonwebtoken = "9"
bcrypt = "0.15"
argon2 = "0.5"

# Rate limiting
tower_governor = "0.3"

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de datos para auth y metadata
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Encriptación
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Validación
validator = { version = "0.18", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Additional utilities
hex = "0.4"
regex = "1"
once_cell = "1"
http = "1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
